# eigen_examples

cmake/: CMakeLists.txt
src/: pseudo_inverse.cpp
